org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Constraint/Constraint_no_call_result/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project Constraint_no_call_result {
	import "${project.baseUri}/002_ConstraintTest.kmt"
}
